resolved double scrollbar in "Panoramica classi"

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,13 +85,13 @@
 }
 
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: 0px 0px 1px 0px #BDBDBD inset;
+    -webkit-box-shadow: 0px 0px 1px 0px #ADADAD inset;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #BDBDBD;
+    background-color: #ADADAD;
     width: .4em;
-    outline: 1px solid #BDBDBD;
+    outline: 1px solid #ADADAD;
     border-radius: 10px;
 }
 
@@ -102,12 +102,12 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-    -webkit-box-shadow: #424242;
+    -webkit-box-shadow: #ADADAD;
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: #424242;
-    outline: 1px solid #424242;
+    background-color: #ADADAD;
+    outline: 1px solid #ADADAD;
 }
 
 /*history*/
